# agent-research

./: .gitignore  README.md  latest-authority-manifest.json  pyproject.toml
.agent-internet/beacons/: agent-research.beacon.json
.github/workflows/: research-heartbeat.yml  validate-federation-node.yml
.well-known/: agent-federation.json
agent_research/: __init__.py  cli.py  engine.py  jiva.py  knowledge.py  models.py  nadi.py  peer_review.py
agent_research/faculty/: __init__.py
agent_research/feed/: __init__.py
agent_research/intake/: __init__.py
agent_research/phases/: __init__.py  dharma.py  genesis.py  karma.py  moksha.py
agent_research/pipeline/: __init__.py
bundles/1bbc33057df1064003181a5d640c22db0be30335/: source-authority-bundle.json
bundles/1bbc33057df1064003181a5d640c22db0be30335/.authority-exports/: source-surface-registry.json  surface-metadata.json
bundles/bc18fc78eb39368745eb885d53ba5f2f5439fc2f/: source-authority-bundle.json
data/: inquiry_ledger.json  knowledge_graph.json  review_ledger.json
data/federation/: .node_keys.json  nadi_inbox.json  peer.json
docs/authority/: capabilities.json  charter.md
docs/authority/research_results/: 0025f13f52cb.json  0025f13f52cb.md  (+2703 more)
docs/inquiries/: open-inquiry-protocol.md
docs/methodology/: research-standards.md
scripts/: export_authority_feed.py  register_with_federation.py  render_federation_descriptor.py  validate_federation.py
tests/: test_dharma.py  test_engine.py  test_genesis.py  test_karma.py  test_knowledge.py  test_models.py  test_moksha.py  test_peer_review.py
(+15 files in other folders)
